[package]
name = "casino"
version = "0.1.0"
description = "Simple casino on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
strum = "0.23.0"
strum_macros = "0.23.0"